# tessaryn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  STATUS.md  THIRD_PARTY_NOTICES.md  deny.toml
.artifact-transfer/: keyxym-v22.wasm.part-00  keyxym-v22.wasm.xz.part-00  keyxym-v22.wasm.xz.part-01
.github/: dependabot.yml
.github/workflows/: apply-world-cell-ready-state.yml  browser-assurance.yml  build-keyxym-merged-exact.yml  build-keyxym-v026-merged-exact.yml  ci-v022.yml  ci.yml  emscripten-toolchain-courier.yml  fuzz.yml  install-keyxym-merged-exact.yml  install-keyxym-v026-runtime.yml  install-keyxym-v4-runtime.yml  keyxym-access-probe.yml  live-origin-probe.yml  migrate-world-cell-v026.yml  pages.yml  real-origin.yml  report-keyxym-blob-mismatches.yml  rust-offline-toolchain.yml  validate-eform-exact.yml  validate-keyxym-v22-exact.yml  validation-origin.yml  vendor-keyxym-v22.yml  verify-live-world-cell.yml
RELEASES/: v0.22.0.md
apps/viewer-web/: index.html  keyxym-mobile.html  mansion.html  package-lock.json  package.json  personal-weave.html  playwright.config.ts  tsconfig.json  vite.config.ts  world-cell-theater.html
apps/viewer-web/e2e/: browser-assurance-capacity.spec.ts  keyxym-v22-authority.spec.ts  keyxym-v26-camera.spec.ts  keyxym-v26-candidate-photographic.spec.ts  keyxym-v26-candidate-reconstruction.spec.ts  logo-mansion.spec.ts  mansion.spec.ts  origin-handoff.spec.ts  origin.spec.ts  production-navigation.spec.ts  world-cell-cold-boot.spec.ts  world-cell-handheld-diagnostic.spec.ts  world-cell-provenance-reconstruction.spec.ts  world-cell-real-camera.spec.ts  world-cell-renderer-resilience.spec.ts  (+3 more)
assets/cinematic/: nostalgia-continuum-monument-01.json  tessaryn-logo-mansion-01.json
conformance/: SHA256SUMS  manifest.json
conformance/expected/: archviz-tiny-house-locus.verify.json  freiburg-desk-locus.verify.json  minimal-reconstruction.verify.json  vesper-court.challenge.json  vesper-court.verify.json
conformance/reconstruction-v0/: minimal-artifact.json
crates/tessaryn-anchor/: Cargo.toml
crates/tessaryn-anchor/src/: lib.rs
crates/tessaryn-canonical/: Cargo.toml
crates/tessaryn-canonical/src/: lib.rs
crates/tessaryn-forge/: Cargo.toml
crates/tessaryn-forge/src/: lib.rs
crates/tessaryn-powerhouse/: Cargo.toml
crates/tessaryn-powerhouse/src/: lib.rs
crates/tessaryn-privacy/: Cargo.toml
crates/tessaryn-privacy/src/: lib.rs
crates/tessaryn-reconstruct/: Cargo.toml
crates/tessaryn-reconstruct/src/: lib.rs
crates/tessaryn-schema/: Cargo.toml
crates/tessaryn-schema/src/: lib.rs
crates/tessaryn-store/: Cargo.toml
crates/tessaryn-store/src/: lib.rs
crates/tessaryn-sync/: Cargo.toml
crates/tessaryn-sync/src/: lib.rs
crates/tessaryn-transport/: Cargo.toml
crates/tessaryn-transport/src/: lib.rs
crates/tessaryn-weave/: Cargo.toml
crates/tessaryn-weave/src/: lib.rs
crates/tessaryn-witness/: Cargo.toml
crates/tessaryn-witness/src/: lib.rs
docs/: KEYXYM_V022_INTEGRATION_PLAN.md  RESTORE_NOTE.md  V022_AUTHORITATIVE_RUNTIME_GATE.md  V022_METRIC_WORLD_CELL_STANDARD.md  V022_RECOVERY_STATUS.md  WORLD_CELL_CONTINUUM_RUNTIME.md  WORLD_CELL_THEATER_RUNTIME_BOUNDARY.md  architecture.md  capture-workflow.md  dependency-risk-register.md  deployment.md  development-constitution.md  logo-mansion.md  privacy-model.md  real-origin.md  reference-measurement.md  release-evidence.md  security-review.md  truth-boundary.md  validation-portfolio.md  verification-model.md  visual-system.md
experiments/: README.md  scale-continuity.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: signed_envelopes.rs  strict_json.rs  world_codecs.rs
infra/nginx/: tessaryn-weave-rate-limit.conf  tessaryn-weave-tls.conf  tessaryn-weave.conf
infra/systemd/: tessaryn-weave-node.service  weave.env.example
sbom/: manifest.json  viewer-web.cdx.json
sbom/rust/: tessaryn-anchor.cdx.json  tessaryn-canonical.cdx.json  tessaryn-cli.cdx.json  tessaryn-forge.cdx.json  tessaryn-powerhouse.cdx.json  tessaryn-privacy.cdx.json  tessaryn-reconstruct.cdx.json  tessaryn-schema.cdx.json  tessaryn-store.cdx.json  tessaryn-sync.cdx.json  tessaryn-transport.cdx.json  tessaryn-weave-node.cdx.json  tessaryn-weave.cdx.json  tessaryn-witness.cdx.json
scripts/: check-no-map-substrate.sh  check-sbom.mjs  check-source-hygiene.mjs  deploy-weave-node.sh  normalize-sbom.mjs  render-continuum-cinematic.sh  render-logo-mansion-cinematic.sh  reproduce-real-origin.sh  reproduce-validation-origin.sh
services/tessaryn-weave-node/: Cargo.toml
services/tessaryn-weave-node/src/: lib.rs  main.rs
specs/: anchor-v0.md  cell-v0.md  cinematic-object-v1.md  encrypted-locus-v0.md  local-file-index-v1.md  materialization-v0.md  privacy-v0.md  public-object-catalog-v1.md  publication-v1.md  reconstruction-v0.md  sync-v0.md  video-locus-v1.md  visual-semantics-v0.md  witness-v0.md  world-cell-scan-v4.md
tools/browser-assurance/: Cargo.toml
tools/browser-assurance/src/: ffi.rs  lib.rs  model.rs  proof.rs  random.rs  tests.rs
tools/tessaryn-cli/: Cargo.toml
tools/tessaryn-cli/src/: artifact.rs  cinematic.rs  datasets.rs  layout.rs  lib.rs  main.rs  tartanair.rs  tum.rs
validation/eform/: Cargo.toml
validation/eform/src/: lib.rs  main.rs  world_cell.rs
validation/eform/tests/: world_cell.rs  world_cell_cli.rs  world_cell_vector.rs
validation/keyxym-v22/: CMakeLists.txt  verify-private-blobs.sh
validation/keyxym-v22/include/keyxym/: provenance.hpp  reconstruction.hpp  sha256.hpp  types.hpp  v20.hpp  v21.hpp  v22.hpp  v22_browser_frontend.hpp  v22_browser_runtime.h  v22_c_api.h  v26.hpp  v26_browser_runtime.h  world_cell.hpp
validation/keyxym-v22/src/: sha256.cpp  v20.cpp  v22.cpp  v22_browser_frontend.cpp  v22_browser_runtime.cpp  v22_c_api.cpp  v26_browser_runtime.cpp  v26_geometry.cpp  v26_internal.hpp  v26_pose.cpp  v26_session.cpp
validation/keyxym-v22/tests/: test_v022_browser_frontend.cpp  test_v022_browser_runtime.cpp  test_v022_wasm.mjs  test_v026.cpp  test_v026_browser_runtime.cpp  test_v026_wasm.mjs
(+102 files in other folders)
