[package]
name = "tessaryn-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
tessaryn-canonical = { path = "../crates/tessaryn-canonical" }
tessaryn-forge = { path = "../crates/tessaryn-forge" }
tessaryn-reconstruct = { path = "../crates/tessaryn-reconstruct" }
tessaryn-sync = { path = "../crates/tessaryn-sync" }
tessaryn-witness = { path = "../crates/tessaryn-witness" }

[[bin]]
name = "strict_json"
path = "fuzz_targets/strict_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "world_codecs"
path = "fuzz_targets/world_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signed_envelopes"
path = "fuzz_targets/signed_envelopes.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]

[patch.crates-io]
ark-relations = { path = "../vendor/ark-relations" }
