[package]
name = "tessaryn-anchor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic fixed-point Anchor Graph for TESSARYN"

[dependencies]
serde.workspace = true
tessaryn-schema = { version = "=0.2.0", path = "../tessaryn-schema" }
thiserror.workspace = true
