[package]
name = "tessaryn-canonical"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Strict canonicalization, Cell identity, and chunk Merkle binding for TESSARYN"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tessaryn-schema = { version = "=0.1.0-rc.1", path = "../tessaryn-schema" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
