[package]
name = "tessaryn-forge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Privacy-gated deterministic capture-record Forge for TESSARYN Cells"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tessaryn-canonical = { path = "../tessaryn-canonical" }
tessaryn-schema = { path = "../tessaryn-schema" }
thiserror.workspace = true
