[package]
name = "tessaryn-privacy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Authenticated private Locus transport and revocation for TESSARYN"

[dependencies]
chacha20poly1305.workspace = true
getrandom.workspace = true
hex.workspace = true
hkdf.workspace = true
serde.workspace = true
sha2.workspace = true
tessaryn-schema = { version = "=0.1.0-rc.1", path = "../tessaryn-schema" }
tessaryn-transport = { version = "=0.1.0-rc.1", path = "../tessaryn-transport" }
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
