[package]
name = "tessaryn-reconstruct"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Deterministic fixed-point RGB-D and sparse SDF reconstruction for TESSARYN"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tessaryn-canonical = { version = "=0.1.0-rc.1", path = "../tessaryn-canonical" }
tessaryn-forge = { version = "=0.1.0-rc.1", path = "../tessaryn-forge" }
tessaryn-schema = { version = "=0.1.0-rc.1", path = "../tessaryn-schema" }
tessaryn-transport = { version = "=0.1.0-rc.1", path = "../tessaryn-transport" }
thiserror.workspace = true
