[package]
name = "tessaryn-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Canonical protocol types for TESSARYN World Cells"

[dependencies]
serde.workspace = true
thiserror.workspace = true

