[package]
name = "tessaryn-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Local content-addressed Cell and chunk store for TESSARYN"

[dependencies]
tessaryn-canonical = { version = "=0.1.0-alpha.2", path = "../tessaryn-canonical" }
tessaryn-schema = { version = "=0.1.0-alpha.2", path = "../tessaryn-schema" }
thiserror.workspace = true
