[package]
name = "tessaryn-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Signed encrypted peer synchronization for TESSARYN Loci"

[dependencies]
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tessaryn-canonical = { version = "=0.5.0", path = "../tessaryn-canonical" }
tessaryn-privacy = { version = "=0.5.0", path = "../tessaryn-privacy" }
tessaryn-powerhouse = { version = "=0.5.0", path = "../tessaryn-powerhouse" }
tessaryn-schema = { version = "=0.5.0", path = "../tessaryn-schema" }
tessaryn-store = { version = "=0.5.0", path = "../tessaryn-store" }
tessaryn-transport = { version = "=0.5.0", path = "../tessaryn-transport" }
tessaryn-witness = { version = "=0.5.0", path = "../tessaryn-witness" }
thiserror.workspace = true
zeroize.workspace = true
