[package]
name = "tessaryn-weave"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Conflict-preserving Locus selection and materialization for TESSARYN"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tessaryn-canonical = { version = "=0.1.0-alpha.2", path = "../tessaryn-canonical" }
tessaryn-schema = { version = "=0.1.0-alpha.2", path = "../tessaryn-schema" }
thiserror.workspace = true
