[package]
name = "tessaryn-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Explicit signed witness receipts for TESSARYN evidence vectors"

[dependencies]
ed25519-dalek.workspace = true
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tessaryn-canonical = { version = "=0.1.0-rc.1", path = "../tessaryn-canonical" }
tessaryn-schema = { version = "=0.1.0-rc.1", path = "../tessaryn-schema" }
tessaryn-transport = { version = "=0.1.0-rc.1", path = "../tessaryn-transport" }
thiserror.workspace = true
zeroize.workspace = true
