[package]
name = "tessaryn-weave-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio"] }
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tessaryn-cli = { path = "../../tools/tessaryn-cli", version = "=0.5.0" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-util = { workspace = true, features = ["io"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "limit"] }

[dev-dependencies]
http-body-util = "0.1"
