[package]
name = "tessaryn-browser-assurance"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.2.0"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
power_house = { version = "0.3.24", default-features = false, features = ["memory"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"

[workspace]
