[package]
name = "tessaryn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TESSARYN Cell capture, reconstruction, inspection, and conformance tooling"

[dependencies]
power_house.workspace = true
serde.workspace = true
serde_json.workspace = true
tessaryn-canonical = { version = "=0.1.1", path = "../../crates/tessaryn-canonical" }
tessaryn-forge = { version = "=0.1.1", path = "../../crates/tessaryn-forge" }
tessaryn-powerhouse = { version = "=0.1.1", path = "../../crates/tessaryn-powerhouse" }
tessaryn-reconstruct = { version = "=0.1.1", path = "../../crates/tessaryn-reconstruct" }
tessaryn-schema = { version = "=0.1.1", path = "../../crates/tessaryn-schema" }
tessaryn-sync = { version = "=0.1.1", path = "../../crates/tessaryn-sync" }
thiserror.workspace = true

[lib]
name = "tessaryn_cli"
path = "src/lib.rs"

[[bin]]
name = "tessaryn"
path = "src/main.rs"
